--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
 @import "tailwindcss";
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    width: 100%;
-    height: 100vh;
-    background-image: url("/light.png");
-    background-color: cover;
-    background-repeat: no-repeat;
-}
+@layer base {
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  
+    body {
+      width: 100%;
+      height: 100vh;
+      background-image: url("/light.png");
+      background-size: cover; /* Corrigido: era background-color: cover */
+      background-repeat: no-repeat;
+      /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
+      padding: 10% 2rem; 
+    }
+  }
