--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,34 @@
       box-sizing: border-box;
     }
   
-    body {
-      width: 100%;
-      height: 100vh;
-      background-image: url("/light.png");
-      background-size: cover; /* Corrigido: era background-color: cover */
-      background-repeat: no-repeat;
-      /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
-      padding: 10% 1rem; 
+
+
+
+    @media (prefers-color-scheme: dark) {
+      body {
+          width: 100%;
+          height: 100vh;
+          background-image: url("/dark.png");
+          background-size: cover; /* Corrigido: era background-color: cover */
+          background-repeat: no-repeat;
+          /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
+          padding: 10% 1rem; 
+          --bg-color: rgba(27, 27, 27, 0.6);
+          --text-color:white;
+      }
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+          width: 100%;
+          height: 100vh;
+          background-image: url("/light.png");
+          background-size: cover; /* Corrigido: era background-color: cover */
+          background-repeat: no-repeat;
+          /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
+          padding: 10% 1rem; 
+          --bg-color: rgba(244, 242, 242, 0.6);
+          --text-color: black;
+      }
     }
   }
