--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,17 @@
     }
   
 
+    :root{
+      --dark: url("/dark.png");
+      --light: url("/light.png"); 
+    }
 
 
     @media (prefers-color-scheme: dark) {
       body {
           width: 100%;
           height: 100vh;
-          background-image: url("/dark.png");
+          background-image: var(--dark);
           background-size: cover; /* Corrigido: era background-color: cover */
           background-repeat: no-repeat;
           /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
@@ -28,7 +32,7 @@
       body {
           width: 100%;
           height: 100vh;
-          background-image: url("/light.png");
+          background-image: var(--light);
           background-size: cover; /* Corrigido: era background-color: cover */
           background-repeat: no-repeat;
           /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
