--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
       }
     }
 
-    @media (prefers-color-scheme: dark) {
+    @media (prefers-color-scheme: light) {
       body {
           width: 100%;
           height: 100vh;
