--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@
 
     @media (prefers-color-scheme: dark) {
       body {
-          width: 100%;
           height: 100vh;
           background-image: var(--dark);
           background-size: cover; /* Corrigido: era background-color: cover */
@@ -25,12 +24,12 @@
           padding: 10% 1rem; 
           --bg-color: rgba(27, 27, 27, 0.6);
           --text-color:white;
+          --bt-color:rgb(26, 81, 147,0.5);
       }
     }
 
     @media (prefers-color-scheme: light) {
       body {
-          width: 100%;
           height: 100vh;
           background-image: var(--light);
           background-size: cover; /* Corrigido: era background-color: cover */
@@ -39,6 +38,8 @@
           padding: 10% 1rem; 
           --bg-color: rgba(244, 242, 242, 0.6);
           --text-color: black;
+          --bt-color:rgba(96, 165, 250, 0.9);
+          ;
       }
     }
   }
