--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
 
+@theme {
+  /* Aqui você define o nome da classe que vai usar no HTML */
+  --animate-fade-in: fade-in 0.9s ease-out;
+
+  @keyframes fade-in {
+    from { 
+      opacity: 0; 
+      transform: translateY(10px); 
+    }
+    to { 
+      opacity: 1; 
+      transform: translateY(0); 
+    }
+  }
+}
+
 @layer base {
     * {
       margin: 0;
@@ -9,20 +25,21 @@
   
 
     :root{
-      --dark: url("/dark.webp");
+      --dark: url("/dark.png");
       --light: url("/light.webp"); 
     }
 
 
     @media (prefers-color-scheme: dark) {
       body {
+          width: 100%;
           height: 100vh;
           background-image: var(--dark);
           background-size: cover; /* Corrigido: era background-color: cover */
           background-repeat: no-repeat;
           /* Evita colocar padding fixo aqui se quiseres usar Tailwind no HTML */
           padding: 10% 1rem; 
-          --bg-color: rgb(28, 28, 28,0.9);
+          --bg-color: rgb(28, 28, 28,0.7);
           --text-color:white;
           --bt-color:rgb(17, 73, 141);
       }
